--- a/startupReact/service/package.json
+++ b/startupReact/service/package.json
@@ -13,6 +13,8 @@
   "private": true,
   "dependencies": {
     "express": "^4.18.2",
+    "mongo": "^0.1.0",
+    "mongodb": "^6.11.0",
     "service": "^0.1.4",
     "uuid": "^10.0.0"
   }
